Felles 32 og bitte litt til (#436)